# aciClient

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml  python-app.yml
aciClient/: __init__.py  aci.py  exceptions.py  models.py  rest_adapter.py
examples/: subscription.py
test/: test_aci.py
